# openapi-lambda-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/petstore/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  openapi.yaml  samconfig.toml  template.yaml
examples/petstore/src/: lib.rs  middleware.rs  pet_handler.rs  store_handler.rs  user_handler.rs
examples/petstore/tests/: integration.rs
openapi-lambda/: Cargo.toml
openapi-lambda-codegen/: Cargo.toml  README.md
openapi-lambda-codegen/src/: apigw.rs  inline.rs  lib.rs  reference.rs
openapi-lambda-codegen/src/api/: body.rs  mod.rs
openapi-lambda-codegen/src/api/operation/: mod.rs  parameter.rs  request_body.rs  response.rs
openapi-lambda-codegen/src/model/: mod.rs  name_model_schemas.rs  tests.rs
openapi-lambda-test/: Cargo.toml  build.rs
openapi-lambda-test/spec/: bar.yaml  baz.yaml  openapi.yaml
openapi-lambda-test/src/: lib.rs
openapi-lambda-test/src/snapshots/: openapi_lambda_test__tests__bar_handler.rs.snap  openapi_lambda_test__tests__foo_handler.rs.snap  openapi_lambda_test__tests__openapi-apigw.yaml.snap  openapi_lambda_test__tests__out.rs.snap
openapi-lambda/src/: error.rs  lib.rs  middleware.rs  models.rs  runtime.rs
openapi-lambda/src/private/: encoding.rs  mod.rs
